[workspace.package]
description = "A Rust library for seamless integration with Merkle's services."
version = "0.0.7"
edition = "2021"
rust-version = "1.65"
repository = "https://github.com/merkle3/merkle-sdk-rs"
license = "MIT OR Apache-2.0"

[workspace]
members = ["sdk", "transactions", "examples/*"]

[workspace.dependencies]
env_logger = "0.10.0"
ethers = "2.0.11"
log = "0.4.19"
futures = "0.3.25"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }

# workspace crates
merkle-sdk-transactions = { version = "0.0.7", path = "transactions" }
