[package]
name = "merkle-sdk"
description = "A Rust library for seamless integration with Merkle's services."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merkle-sdk-transactions.workspace = true
