[package]
name = "merkle-sdk-transactions"
description = "Utilities to access the Merkle's transactions network"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
ethers = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
rlp = { version = "0.5", features = ["derive"] }
