[package]
name = "examples-transactions"
publish = false
version.workspace = true
license.workspace = true
rust-version.workspace = true
edition.workspace = true

[dev-dependencies]
log = { workspace = true }
tokio = { workspace = true }
merkle-sdk-transactions = { path = "../../transactions" }
futures = { workspace = true }
