[package]
name = "examples-transactions"
publish = false
version.workspace = true
license.workspace = true
rust-version.workspace = true
edition.workspace = true

[dev-dependencies]
log = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
merkle-sdk = { path = "../../sdk" }

